examples/test/testpolicy4234.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4234
  namespace: namespace341
spec:
  podSelector:
    matchLabels:
      key41: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value27
          key13: value30
          key3: value10
      podSelector:
        matchLabels:
          key43: value9
          key49: value43
